# chess-msgs

./: CMakeLists.txt  package.xml
action/: EvaluateMove.action  FindBestMove.action
msg/: ChessBoardFEN.msg  ChessMoveUCI.msg  ChessTime.msg  EngineInfo.msg  GameConfig.msg
